--- a/emergency-app/package.json
+++ b/emergency-app/package.json
@@ -5,10 +5,16 @@
   "dependencies": {
     "@headlessui/react": "^1.7.15",
     "@heroicons/react": "^2.0.18",
+    "@polybase/auth": "^0.6.2",
+    "@polybase/client": "^0.6.2",
+    "@polybase/react": "^0.6.2",
     "@tailwindcss/forms": "^0.5.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@web3-react/core": "^6.1.9",
+    "@web3-react/injected-connector": "^6.0.7",
+    "@web3-react/types": "^8.2.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
@@ -16,7 +22,10 @@
     "react-router-dom": "^6.14.0",
     "react-scripts": "5.0.1",
     "sort-by": "^1.2.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "web3-react": "^5.0.5",
+    "web3": "^1.9.0",
+    "web3.storage": "^4.5.4"
   },
   "scripts": {
     "start": "react-scripts start",
