--- a/emergency-app/package.json
+++ b/emergency-app/package.json
@@ -19,12 +19,13 @@
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-qr-scanner": "^1.0.0-alpha.11",
     "react-router-dom": "^6.14.0",
     "react-scripts": "5.0.1",
     "sort-by": "^1.2.0",
     "web-vitals": "^2.1.4",
-    "web3-react": "^5.0.5",
     "web3": "^1.9.0",
+    "web3-react": "^5.0.5",
     "web3.storage": "^4.5.4"
   },
   "scripts": {
